eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Safety_Deposit_Box_Access__c.object
<CustomObject>
    <fields>
        <fullName>Accessed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accessed by</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Safety_Deposit_Box_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_for_access__c</fullName>
        <label>Charge for access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_and_time_of_access__c</fullName>
        <label>Date and time of access</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Safety_Deposit_Box__c</fullName>
        <label>Safe Deposit Box</label>
        <referenceTo>Safety_Deposit_Box__c</referenceTo>
        <relationshipLabel>Safe Deposit Box Accesses</relationshipLabel>
        <relationshipName>Safety_Deposit_Box_Accesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Safe Deposit Box Access</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SDBAccess{0000}</displayFormat>
        <label>Safe Deposit Box Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safe Deposit Box Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>